--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,10 +4,36 @@
     margin:0;
     padding:0;
     box-sizing: border-box;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 
+h1 {
+    display: flex;
+    justify-content: center;
+    background-color: aquamarine;
+    padding:10px;
+}
 
-.results {
+.hero {
+    background-color: brown;
+    
+}
 
-    background-color: aqua;
+.content {
+    display: flex;
+    justify-content: space-between;
+    background-color: blue;
+}
+
+.results{
+    flex-basis: 200px;
+}
+
+.footer {
+    background-color: blueviolet;
+}
+
+.responsive {
+
+    width:100%;
 }
