--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,15 +7,18 @@
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 
+/* Main Elements */
+
 main, header, section, footer {
     margin: 0;
     padding: 20px;
     border: 1px solid #000000;
 }
+
 h1 {
     display: flex;
     justify-content: center;
-    background-color: aquamarine;
+    background-color: #4381C1;
     padding:10px;
 }
 
@@ -24,22 +27,55 @@ h3 {
 }
 
 .hero {
-    background-color: brown;
-    
+    background-color: #FAF4D3; 
 }
 
 .content {
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
-    background-color: green;
+    flex-wrap: wrap;
+    background-color: #f5f5f5;
 }
+
+.content> section {
+    background-color: white;
+    border-radius: 5%;
+}
+
+.description_container > ul > li {
+
+    margin-bottom:10px
+}
+
+.results{
+    background-color: #4381C1;
+    color:white;
+    width: 70%;
+    border-radius: 4px;
+    margin: 10px;
+    padding:5px 10px
+}
+
+.footer {
+    background-color: #4381C1;
+}
+
+/* Utilities */
 
 img{
     max-width: 300px;
     max-height: 300px;
 }
 
-.footer {
-    background-color: blueviolet;
+#button {
+    border:none;
+    border-radius: 10px;
+    background-color: #1B1F3B;
+    color:white;
+    padding:10px;
+    margin: 20px 0 ;
+}
+
+#name {
+    padding: 2px 0;
 }
